[package]
name = "web-extension-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"